saas/web/financeflow/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: financeflow
spec:
  replicas: 1
  selector:
    matchLabels:
      app: financeflow
  template:
    metadata:
      labels:
        app: financeflow
    spec:
      containers:
      - name: financeflow
        image: heiffigjr/saas-financeflow:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
