saas/web/financeflow/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: financeflow
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx

  tls:
    - hosts:
      - financeflow-cloud.dnn.lat  
      secretName: wildcard-dnn

  rules:
    - host: financeflow-cloud.dnn.lat
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: financeflow
              port:
                number: 80
